--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: python
 python: 2.7
-
-# install:
-# - pip install -U tox
-
 script: echo Build passed
 deploy:
   provider: script
-  script: ./deploy.sh
+  script: "./deploy.sh"
   on:
     branch: development
+before_install:
+- openssl aes-256-cbc -K $encrypted_ef748fe1608c_key -iv $encrypted_ef748fe1608c_iv
+  -in deploy_key.pem.enc -out .travis/deploy_key.pem -d
