--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ deploy:
   on:
     branch: development
 before_install:
+- mkdir -p .travis
 - openssl aes-256-cbc -K $encrypted_ef748fe1608c_key -iv $encrypted_ef748fe1608c_iv
   -in deploy_key.pem.enc -out .travis/deploy_key.pem -d
