--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
-language: python
-python: 2.7
-script: echo Build passed
-deploy:
-  provider: script
-  script: "./deploy.sh"
-  on:
-    branch: development
 before_install:
 - mkdir -p .travis
 - openssl aes-256-cbc -K $encrypted_ef748fe1608c_key -iv $encrypted_ef748fe1608c_iv
   -in deploy_key.pem.enc -out .travis/deploy_key.pem -d
+deploy:
+  true:
+    branch: development
+  provider: script
+  script: ./deploy.sh
+language: python
+python: 2.7
+script: echo Build passed
