try reenabling with true instead of on

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ before_install:
 deploy:
   provider: script
   script: ./deploy.sh
+  true:
+    branch: development
 language: python
 python: 2.7
 script: echo Build passed
